# fdf

./: CMakeLists.txt  a.out  main.c
include/: fdf.h
libft/: ft_substr.c
minilibx/: mlx_int.h  mlx_xpm.c
src/: CreateWindow.c  draw.c  fill_map.c  get_next_line.c  get_next_line.h  get_next_line_utils.c  readmap.c
